--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,29 +1,30 @@
 body {
     background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallup.net%2Fwp-content%2Fuploads%2F2016%2F01%2F272027-galaxy-space-NASA.jpg&f=1&nofb=1");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-size: auto;
+    background-attachment: fixed;
 }
 
-
-h5, input {
-    
+input {
     color: black;    
 }
 
-
-
 label {
-    
     color: black;
 }
 
 #new-password {
-    
+    color: black;
+}
+
+p {
+    margin-left: auto;
+    margin-right: auto;
+    width: 14em;
+    word-wrap: break-word;
     color: black;
 }
 
 fieldset {
-    
     border: 5px solid rgb(0, 0, 0);
     background: #ddd;
     border-radius: 5px;
@@ -31,12 +32,6 @@ fieldset {
     padding-right: 30%;
     background-color: white;
     opacity: 0.75;
-}
-
-p {
-    padding-left: 5%;
-    font-family: sans-serif;
-    color: black;
 }
 
 main {
