--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallup.net%2Fwp-content%2Fuploads%2F2016%2F01%2F272027-galaxy-space-NASA.jpg&f=1&nofb=1");
+    background-image: url("../images/nebloolo.jpg");
     background-size: auto;
     background-attachment: fixed;
 }
