--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,80 @@
+/* Generally Applicable CSS */
 body {
-    background-image: url("../images/nebloolo.jpg");
-    background-size: auto;
-    background-attachment: fixed;
+  background-image: url("../images/nebloolo.jpg");
+  background-size: auto;
+  background-attachment: fixed;
 }
 
 input {
-    color: black;    
+  color: black;
 }
 
 label {
-    color: black;
+  color: black;
 }
 
 #new-password {
-    color: black;
+  color: black;
 }
 
 p {
-    margin-left: auto;
-    margin-right: auto;
-    width: 14em;
-    word-wrap: break-word;
-    color: black;
+  margin-left: auto;
+  margin-right: auto;
+  width: 14em;
+  word-wrap: break-word;
+  color: black;
 }
 
-fieldset {
-    border: 5px solid rgb(0, 0, 0);
-    background: #ddd;
-    border-radius: 5px;
-    padding-left: 30%;
-    padding-right: 30%;
-    background-color: white;
-    opacity: 0.75;
+#inner-fieldset {
+	border: 1px solid rgb(0, 0, 0);
+  border-radius: 3px;
+	text-align: left;
 }
 
-main {
-    padding-left: 30%;
-    padding-right: 30%;
+.outer-fieldset {
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  background-color: white;
+  opacity: 0.75;
+	text-align: center;
+}
+
+/* Large Screens */
+@media screen and (min-width: 1080px) {
+  fieldset {
+    padding-left: 10%;
+    padding-right: 10%;
+    
+  }
+
+  main {
+    padding-left: 20%;
+    padding-right: 20%;
+  }
+}
+
+/* Medium Screens */
+@media screen and (min-width: 640px) and (max-width: 1079px) {
+  fieldset {
+    padding-left: 8%;
+    padding-right: 8%;
+  }
+
+  main {
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+
+/* Small Screens */
+@media screen and (max-width: 659px) {
+  fieldset {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  main {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
 }
